# FlutterRust

flutter_side/: README.md  pubspec.yaml
flutter_side/android/app/: build.gradle
flutter_side/android/app/src/main/: AndroidManifest.xml
flutter_side/android/app/src/main/kotlin/com/example/flutter_side/: MainActivity.kt
flutter_side/ios/Runner/: Info.plist
flutter_side/ios/Runner.xcodeproj/: project.pbxproj
flutter_side/lib/: main.dart
flutter_side/linux/: CMakeLists.txt  my_application.cc
flutter_side/macos/Runner.xcodeproj/: project.pbxproj
flutter_side/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_side/macos/Runner/Configs/: AppInfo.xcconfig
flutter_side/test/: widget_test.dart
flutter_side/web/: index.html  manifest.json
flutter_side/windows/: CMakeLists.txt
flutter_side/windows/runner/: Runner.rc  main.cpp
rs_side/: Cargo.toml
rs_side/src/: main.rs
