[package]
name = "rs_side"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.22.2", features = ["tokio-runtime"] }
futures = "0.3.28"
tokio = { version = "1.28.1", features = ["full"] }
